<resources>
    <string name="app_name">Karar ve Döngü Yapıları Ünite-4</string>
    <string name="uyg1_name">Uygulama-1 (100 den Büyük mü)</string>
    <string name="uyg2_name">Uygulama-2 (Hangisi Büyük)</string>
    <string name="uyg3_name">Uygulama-3 (Login İşlemi)</string>
    <string name="uyg4_name">Uygulama-4 (Konum Servisleri)</string>
    <string name="uyg5_name">Uygulama-5 (Ders Notu Girişi)</string>
    <string name="uyg6_name">Uygulama-6 (Switch-Case Uygulaması)</string>
    <string name="uyg7_name">Uygulama-7 (For Örneği-1)</string>
    <string name="uyg8_name">Uygulama-8 (For Örneği-2)</string>
    <string name="uyg9_name">Uygulama-9 ()</string>
    <string name="uyg10_name">Uygulama-10 ()</string>

    <string name="swKonumServisleri">Konum Servisleri</string>
    <string name="swKonumAl">Konum Bilgilerini Al</string>
    <string name="swKonumGonder">Konum Bilgilerini Gönder</string>

    <string name="btnOnayla">Onayla</string>
</resources>